--- a/.github/workflows/tests-docs.yml
+++ b/.github/workflows/tests-docs.yml
@@ -2,55 +2,64 @@ name: Tests and Docs
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+
+# Permissões necessárias para o deploy oficial do GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Evita deploys concorrentes
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
+          pip install -r requirements.txt
           pip install pytest
 
       - name: Run tests
-        run: pytest -q
+        run: pytest --maxfail=1 --disable-warnings -q
 
   docs:
+    needs: tests   # só corre se os testes passarem
     runs-on: ubuntu-latest
-    needs: test   # só roda docs se os testes passarem
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install MkDocs and plugins
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .
           pip install mkdocs mkdocs-material mkdocstrings[python]
 
       - name: Build MkDocs site
         run: mkdocs build --strict
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
-          publish_branch: gh-pages
+          path: ./site
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
