--- a/.github/workflows/tests-docs.yml
+++ b/.github/workflows/tests-docs.yml
@@ -32,7 +32,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
 
       - name: Run tests
         run: pytest --maxfail=1 --disable-warnings -q
@@ -50,7 +49,7 @@ jobs:
 
       - name: Install MkDocs and plugins
         run: |
-          pip install mkdocs mkdocs-material mkdocstrings[python]
+          pip install -r requirements.txt
 
       - name: Build MkDocs site
         run: mkdocs build --strict
