--- a/.github/workflows/tests-docs.yml
+++ b/.github/workflows/tests-docs.yml
@@ -1,23 +1,3 @@
-name: Tests and Docs
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-# Permissões necessárias para o deploy oficial do GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Evita deploys concorrentes
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
@@ -31,34 +11,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pytest
           pip install -r requirements.txt
 
       - name: Run tests
         run: pytest --maxfail=1 --disable-warnings -q
-
-  docs:
-    needs: tests   # só corre se os testes passarem
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install MkDocs and plugins
-        run: |
-          pip install -r requirements.txt
-
-      - name: Build MkDocs site
-        run: mkdocs build --strict
-
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./site
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
